Stop nouns from changing when they are off screen

--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -154,7 +154,7 @@ a:hover { color: #FF0; }
   background-attachment: fixed;
   overflow: hidden;
 
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .banner-content h1 {
